--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<nav>
+	
+	<nav class="container">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -16,6 +17,7 @@
             <li><a href="#">Itinerary</a></li>
         </ul>
     </nav>
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
